[tool.poetry]
name = "threatscraperedit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
schedule = "^1.2.0"
requests = "^2.31.0"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
matplotlib = "^3.7.1"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.275"
datetime = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
